src/objects/Prediction__c.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known__c</fullName>
        <label>Known</label>
        <referenceTo>Known__c</referenceTo>
        <relationshipLabel>Predictions</relationshipLabel>
        <relationshipName>Predictions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Prediction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Prediction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Predictions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>